--- a/product-api/Deno.json
+++ b/product-api/Deno.json
@@ -4,6 +4,8 @@
     "dev": "deno run --watch --allow-net --allow-read --allow-write main.ts"
   },
   "imports": {
-    "@oak/oak": "jsr:@oak/oak@^17.1.5"
+    "@oak/oak": "jsr:@oak/oak@^17.1.5",
+    "@std/path": "jsr:@std/path@1.0.6",
+    "@tajpouria/cors": "jsr:@tajpouria/cors@1.2.1"
   }
 }
