--- a/product-api/Deno.json
+++ b/product-api/Deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "start": "deno run --allow-net --allow-read --allow-write -allow-env main.ts",
+    "start": "deno run --allow-net --allow-read --allow-write --allow-env main.ts",
     "dev": "deno run --watch --allow-net --allow-read --allow-write --allow-env --env-file=.env main.ts"
   },
   "imports": {
