--- a/web/package.json
+++ b/web/package.json
@@ -11,16 +11,22 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
+	"dependencies": {
+		"@sveltejs/kit": "^2.37.0",
+		"clsx": "^2.1.1",
+		"cookie": "^1.0.2",
+		"set-cookie-parser": "^2.7.1",
+		"svelte": "^5.38.6",
+		"vite": "^7.1.4",
+		"devalue": "^5.0.0"
+	},
 	"devDependencies": {
 		"@deno/svelte-adapter": "^0.1.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/adapter-static": "^3.0.9",
-		"@sveltejs/kit": "^2.37.0",
 		"@sveltejs/vite-plugin-svelte": "^6.1.4",
-		"svelte": "^5.38.6",
 		"svelte-check": "^4.0.0",
 		"svelte-preprocess": "^6.0.3",
-		"typescript": "^5.0.0",
-		"vite": "^7.1.4"
+		"typescript": "^5.0.0"
 	}
 }
